--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -14,14 +14,12 @@
     --bg-general: #F6F7FB;
     --bg-light-block: #ffffff; 
     --bg-dark-block: #27282B; 
-
     
     --shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     --shadow-big: 0px 0px 20px rgba(0, 0, 0, 0.4);
     
     --container: 100%; 
     --container-fluid: 100%;
-    
     
     --color-text-revert: #ffffff;
     --color-text-dark: #000;
@@ -37,16 +35,11 @@
     --br-big: 20px;
     --br-dynamic-big: 0px;
     
-    
+    /* navigation */
     --navigation-color-active: #000000;
     --navigation-color-inactive: #BEBEBE;
-    --navigation-color-hover: var(--navigation-color-active);
-    --navigation-transitoin: 0.2s;
-    --navigation-space-between-items: 15px;
-    --navigation-height: 40px;
-    --navigation-head-height: 85px; 
-
-
+    --navigation-height: 65px;
+    --navigation-transition: 0.2s;
     
     /* review */
     --m-block-paddings: 20px 16px;
@@ -58,7 +51,7 @@
     --margin-3: 10px;
 
     --mobile-space: 16px;
-} 
+}
 body {
     background: var(--bg-general);
 } 
@@ -228,7 +221,7 @@ button {
     bottom: 0; 
     margin: 0;
     padding: 0;
-    z-index: 10;
+    z-index: 2;
 }
 .image-fluid {
     display: block;
@@ -265,7 +258,7 @@ section{
     width: var(---container-fluid);
 }
 .fix-navigation {
-    margin-top: 100px;
+    margin-top: 80px;
 }
 .fix-footer {
     margin-top: 100px;
@@ -281,151 +274,148 @@ section{
     margin-right: var(--mobile-space);
 }
 
+
+
 /* navigation */
-.navigation-head {
-    display: flex;
-    justify-content: center;
-    background: var(--bg-light-block);
-    height: var(--navigation-head-height);
+nav {
+    position: relative;
+    z-index: 10;
 }
-.head-content {
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--bg-light-block);
+    box-shadow: var(--shadow);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 var(--mobile-space);
+    width: 100%;
+    height: var(--navigation-height);
+    z-index: 5;
 }
-.logo {
-    display: flex;
-    align-items: center;
-}
-.logo .logoo {
-    width: 50px;
-    height: 50px;
+.nav::before {
     background: var(--bg-light-block);
-    box-shadow: var(--shadow);
-    margin-right: var(--margin-3);
-}
-.logo p {
-    color: #000;
-    font-size: 23px;
-}
-.in-up button:not(:last-child) {
-    margin-right: 5px;
-}
-
-
-.nav-wrapper {
-    position: sticky;
-    position: -webkit-sticky;
+    content: "";
+    position: absolute;
+    left: 0;
     top: 0;
-    display: flex;
-    justify-content: center;
-    background: var(--bg-light-block);
-    box-shadow: var(--shadow);
-    height: var(--navigation-height);
-}
-nav {
-    display: flex;
-    justify-content: center;
-    width: var(--container);
+    width: 100%;
     height: 100%;
-    margin: 0 var(--mobile-space) 0 var(--mobile-space);
-} 
-
-.nav-item-wrapper {
+    z-index: 2;
+}
+.nav .logo a {
+    color: var(--color-text-dark);
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
     position: relative;
+    z-index: 3;
 }
-
-.nav-item p,
-.nav-item svg {
-    transition: var(--navigation-transitoin);
-}
-
-/* nav active */
-.nav-item-wrapper.multi.active .nav-item p,
-.nav-item-wrapper.multi.active .nav-item svg {
-    stroke: var(--navigation-color-active);
-    color: var(--navigation-color-active);
-}
-.nav-item-wrapper.multi:hover .nav-item p,
-.nav-item-wrapper.multi:hover .nav-item svg {
-    stroke: var(--navigation-color-active);
-    color: var(--navigation-color-active);
-}
-
-
-.nav-item-wrapper.active .nav-item a {
-    color: var(--navigation-color-active);
-}
-.nav-item-wrapper:hover .nav-item a {
-    color: var(--navigation-color-hover);
-}
-
-.nav-item {
-    display: flex; 
-    align-items: center;
-    padding: 0 var(--navigation-space-between-items);
-    width: min-content;
-    height: var(--navigation-height);
+.links {
+    background: var(--bg-light-block);
+    width: 100%;
+    height: 100vh;
+    padding: calc(var(--navigation-height) + var(--mobile-space) * 2) var(--mobile-space) 0 var(--mobile-space);
+    position: absolute;
+    top: -20px;
+    left: 0;
+    opacity: 0;
+    overflow: auto;
+    transition: var(--navigation-transition) linear;
+    visibility: hidden;
+    z-index: -10;
 }
 .nav-link {
-    transition: var(--navigation-transitoin);
     color: var(--navigation-color-inactive);
-    font-weight: 500;
-    white-space: nowrap;
+    font-size: 26px;
+    font-weight: 600;
 }
-.nav-link:hover {
+.nav-item:not(:last-child) {
+    margin-bottom: 25px;
+}
+
+/* burger */
+.burger {
+    width: 30px;
+    height: 15px;
+    position: relative;
+    z-index: 3;
+}
+.burger::before,
+.burger::after {
+    background: var(--navigation-color-active);
+    content: "";
+    height: 3px;
+    position: absolute;
+    transition: var(--navigation-transition); 
+    width: 100%;
+}
+.burger::before {
+    top: 0;
+}
+.burger::after {
+    bottom: 0;
+}
+
+/* multi nav */
+.multi-wrapper {
+    display: flex;
+    align-items: center;
+}
+.multi-wrapper .nav-link {
+    margin-right: 3px;
+}
+.multi-wrapper svg {
+    fill: var(--navigation-color-inactive);
+}
+.dropdown {
+    display: none;
+    opacity: 0;
+    transition: var(--navigation-transition);
+    visibility: hidden;
+}
+.dropdown li {
+    list-style: none;
+}
+.dropdown li:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+
+/* open / active */
+.nav.open .links {
+    opacity: 1;
+    top: 0;
+    visibility: visible;
+}
+.nav.open .burger::before {
+    transform: translateY(6px) rotate(45deg);
+}
+.nav.open .burger::after {
+    transform: translateY(-6px) rotate(-45deg);
+}
+.nav-link.active {
     color: var(--navigation-color-active);
 }
-
-/* multi nav item */
-.nav-item-flex {
-    display: flex;
-    align-items: center; 
+.nav-multi.active p {    
+    color: var(--navigation-color-active);
 }
-.nav-item-flex p {
-    margin-right: 3px;
-    user-select: none;
+.nav-multi.active svg {    
+    fill: var(--navigation-color-active);
 }
-.nav-item-flex svg {
-    stroke: var(--navigation-color-inactive);
+.nav-multi.active.open .dropdown { 
+    border-left: 3px solid var(--navigation-color-active);
 }
-
-
-/* drop down menu */
-.nav-drop-down { 
-    transition: var(--navigation-transitoin);
-    position: absolute;
-    min-width: 100%;
-    visibility: hidden;
-    opacity: 0;
-    
-    background: var(--bg-light-block);
-    border-radius: var(--br);
-    box-shadow: var(--shadow);
-}
-.dropdown-active .nav-drop-down {
-    margin-top: var(--margin-3);
-    visibility: visible;
+.nav-item.open .dropdown { 
+    display: block;
+    padding-left: 10px;
+    border-left: 3px solid var(--navigation-color-inactive);
+    margin: 15px 0 0 7px;
     opacity: 1;
+    visibility: visible;
 }
-.drop-down-item {
-    padding: 0 var(--margin-2);
-}
-.drop-down-item:last-child {
-    margin-bottom: var(--margin-3);
-}
-.drop-down-item:first-child {
-    margin-top: var(--margin-3);
-}
-.drop-down-item:not(:last-child) {
-    padding-bottom: calc(var(--margin-2) / 2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.drop-down-item:not(:first-child) {
-    padding-top: calc(var(--margin-2) / 2);
-}
-
-
 
 
 
@@ -446,7 +436,6 @@ footer {
 
 
 
-/* media */
 @media screen and (min-width: 550px) {
     * { 
         font-size: 16px; 
