--- a/src/templates/base/conponents/navigation.html
+++ b/src/templates/base/conponents/navigation.html
@@ -1,96 +1,59 @@
-<div class="navigation">
-    <div class="navigation-head">
-        <div class="head-content container">
-            <div class="logo">
-                <div class="logoo"></div>
+<nav>
+    <div class="head">
 
-                <p>STETI</p>
+    </div>
+
+    <div class="nav">
+        <div class="logo">
+            <a href="/">STETI</a>
+        </div>
+
+        <div class="links">
+            {% url 'home' as home_url %}
+            <div class="nav-item">
+                <a href="{{ home_url }}" class="nav-link {% if request.path == home_url %}active{% endif %}">Головна</a>
+            </div>
+            {% url 'news_announces' as news_announces_url %}
+            <div class="nav-item">
+                <a href="{{ news_announces_url }}" class="nav-link {% if request.path == news_announces_url %}active{% endif %}">Новиши та оголошення</a>
             </div>
 
-            <div class="in-up">
-                <button class="btn-transparent btn-border-black">реєстрація</button>
-                <button class="btn-black btn-border-black">вхід</button>
+            <div class="nav-item">
+                <a href="" class="nav-link">Циклова комісія</a>
+            </div>
+            {% url 'about_us' as about_us_url %}{% url 'contacts' as contacts_url %}{% url 'gallery_categorys' as gallery_categorys_url %}
+            <div class="nav-item nav-multi {% if request.path == about_us_url or request.path == contacts_url or request.path == gallery_categorys_url %}active{% endif %}">
+                <div class="multi-wrapper">
+                    <p class="nav-link">Про заклад</p>
+                    <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.5 7.5L0.870834 0.75L12.1292 0.75L6.5 7.5Z"/>
+                    </svg>
+                </div>
+                
+                <ul class="dropdown">
+                    <li><a href="{{ about_us_url }}" class="nav-link {% if request.path == about_us_url %}active{% endif %}">Про нас</a></li>
+                    <li><a href="{{ contacts_url }}" class="nav-link {% if request.path == contacts_url %}active{% endif %}">Галерея</a></li>
+                    <li><a href="{{ gallery_categorys_url }}" class="nav-link {% if request.path == gallery_categorys_url %}active{% endif %}">Контакти</a></li>
+                </ul>
+            </div>
+            {% url 'library' as library_url %}{% url 'for_entrant' as for_entrant_url %}{% url 'for_student' as for_student_url %}{% url 'gallery_categorys' as gallery_categorys_url %}
+            <div class="nav-item nav-multi {% if request.path == library_url or request.path == for_entrant_url or request.path == for_student_url or request.path == gallery_categorys_url %}active{% endif %}">
+                <div class="multi-wrapper">
+                    <p class="nav-link">Навчання</p>
+                    <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.5 7.5L0.870834 0.75L12.1292 0.75L6.5 7.5Z"/>
+                    </svg>
+                </div>
+
+                <ul class="dropdown">
+                    <li><a href="{{ library_url }}" class="nav-link {% if request.path == library_url %}active{% endif %}">Бібліотека</a></li>
+                    <li><a href="{{ for_entrant_url }}" class="nav-link {% if request.path == for_entrant_url %}active{% endif %}">Студунту</a></li>
+                    <li><a href="{{ for_student_url }}" class="nav-link {% if request.path == for_student_url %}active{% endif %}">Абітурієнту</a></li>
+                    <li><a href="" class="nav-link">ЗНО</a></li>
+                </ul>
             </div>
         </div>
-    </div>
 
-    {% url 'home' as url_home %}
-    {% url 'news_announces' as news_announces_url %}
-    {% url 'about_us' as about_us_url %}
-    {% url 'contacts' as contacts_url %}
-    {% url 'gallery_categorys' as gallery_categorys_url %}
-    {% url 'library' as library_url %}
-    {% url 'for_student' as for_student_url %}
-    {% url 'for_entrant' as for_entrant_url %}
-    <div class="nav-wrapper centralize">
-        <nav>
-            <div class="nav-item-wrapper active">
-                <div class="nav-item">
-                    <a href="" class="nav-link">Головна</a>
-                </div>
-            </div>
-    
-            <div class="nav-item-wrapper">
-                <div class="nav-item">
-                    <a href="" class="nav-link">Новиши та оголошення</a>
-                </div>
-            </div>
-    
-            <div class="nav-item-wrapper">
-                <div class="nav-item">
-                    <a href="" class="nav-link">Циклова комісія</a>
-                </div>
-            </div>
-    
-    
-            <div class="nav-item-wrapper multi">
-                <div class="nav-item">
-                    <div class="nav-item-flex">
-                        <p href="" class="nav-link">Про заклад</p>
-                        <svg width="10" height="8" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L5 5L9 1" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>    
-                    </div>
-                </div>
-    
-                <div class="nav-drop-down">
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Про нас</a>
-                    </div>
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Контакти</a>
-                    </div>
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Галерея</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="nav-item-wrapper multi">
-                <div class="nav-item">
-                    <div class="nav-item-flex">
-                        <p class="nav-link">Навчання</p>
-                        <svg width="10" height="8" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L5 5L9 1" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>    
-                    </div>
-                </div>
-    
-                <div class="nav-drop-down">
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Бабліотека</a>
-                    </div>
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Студенту</a>
-                    </div>
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">Абітурієнту</a>
-                    </div>
-                    <div class="drop-down-item">
-                        <a href="" class="nav-link">ЗНО</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="burger"></div>
     </div>
-</div>
+</nav>
