--- a/src/templates/base/conponents/navigation.html
+++ b/src/templates/base/conponents/navigation.html
@@ -1,6 +1,15 @@
 <nav>
     <div class="head">
-
+        <div class="head-content">
+            <div class="logo">
+                <a href="/">STETI</a>
+            </div>
+    
+            <div class="in-up">
+                <button class="btn-transparent btn-border-black">вхід</button>
+                <button class="btn-black">реєстрація</button>
+            </div>
+        </div>
     </div>
 
     <div class="nav">
