Fix some bugs, and broken the Base JS class

--- a/src/templates/about/about-us.html
+++ b/src/templates/about/about-us.html
@@ -14,19 +14,25 @@
                 <div class="about-header">
                     <div class="about-description">
                         <h2 class="mobile-space">Про нас</h2>
-                        <p class="mobile-space">{{ data.first_paragraph|safe }}</p>
+                        <div class="mobile-space">
+                            <p class="mobile-space">{{ data.first_paragraph|safe }}</p>
+                        </div>
                     </div>
 
                     <img src="{{ data.img.url }}" alt="">
                     
                 </div>
-                <p class="mobile-space">{{ data.second_paragraph|safe }}</p>
-                <p class="mobile-space">{{ data.third_paragraph|safe }}</p>
-
+                <div class="mobile-space">
+                    <p class="mobile-space">{{ data.second_paragraph|safe }}</p>
+                    <p class="mobile-space">{{ data.third_paragraph|safe }}</p>
+                </div>
+                
             </section>
             <section class="container">
                 <h2 class="mobile-space">Кафедри</h2>
-                <p class="mobile-space">{{ data.about_departments|safe }}</p>
+                <div class="mobile-space">
+                    <p class="mobile-space">{{ data.about_departments|safe }}</p>
+                </div>
                 <div class="departments">
                     {% for department in departments %}
                     <div class="card">
