--- a/src/static_files/about/css/gallery-list.css
+++ b/src/static_files/about/css/gallery-list.css
@@ -9,10 +9,12 @@
 .category-item { 
     position: relative; 
     display: block;
+    height: 100%;
 } 
 .category-item img { 
     border-radius: var(--br-dynamic);
     box-shadow: var(--shadow);
+    
     width: 100%;
     min-height: 100%;  
     margin-bottom: 10px;
@@ -40,7 +42,7 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr); 
         grid-column-gap: 30px;
-        grid-row-gap: 30px;
+        grid-row-gap: 40px;
         text-align: center; 
     } 
 }
