--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -307,7 +307,11 @@ nav {
     width: var(--container);
     height: 100%;
 }
-.in-up button:not(:last-child) {
+.in-up {
+    display: flex;
+    align-items: center;
+}
+.in-up button:first-child {
     margin-right: 10px;
 }
 
@@ -347,7 +351,7 @@ nav {
     background: var(--bg-light-block);
     width: 100%;
     height: 100vh;
-    padding: 0 16px;
+    padding: calc(var(--navigation-height) + 16px) 0 0 16px;
     position: absolute;
     top: -20px;
     left: 0;
@@ -511,6 +515,9 @@ footer {
     section{
         margin-bottom: 100px;
     } 
+    .fix-navigation {
+        margin-top: 150px;
+    }
     
     /* navigation */
     .nav::before {
@@ -595,9 +602,6 @@ footer {
 @media screen and (min-width: 1140px) {
     * { 
         --container: 1060px;
-    }
-    .fix-navigation {
-        margin-top: 150px;
     }
 }
 
